--- a/instrumental/styles.css
+++ b/instrumental/styles.css
@@ -1,6 +1,6 @@
 html {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 body {
   font-family: "Inter", sans-serif;
@@ -58,8 +58,12 @@ li {
 
 .documentation {
     margin: 1rem 6rem;
+    h1 {
+        margin: 8px;
+    }
     h2 {
         font-size: 2rem;
+        margin: 8px;
     }
     h3 {
         margin: 8px;
@@ -70,8 +74,20 @@ li {
     p {
         margin: 8px;
     }
+    img {
+        margin: 8px;
+        width: 50%;
+    }
 }
 
 .title {
     text-align: center;
+}
+
+.with-image {
+    display: flex;
+    justify-content: space-between;
+    img {
+        width: 25%;
+    }
 }
