--- a/instrumental/styles.css
+++ b/instrumental/styles.css
@@ -42,6 +42,13 @@ li {
     background-color: #0000000a;
 }
 
+.sketches {
+    display: flex;
+    img {
+        width: 5%;
+    }
+}
+
 .links {
     margin: 0 5rem;
     display: flex;
